// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utils for techstack tests getChecksForTechStack should return correct checks 1`] = `
Array [
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "check-eslint-a-a",
    "type": "eslint",
  },
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "check-stricter-a-a",
    "type": "stricter",
  },
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "anti-check-eslint-a-b",
    "type": "eslint",
  },
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "anti-check-stricter-a-b",
    "type": "stricter",
  },
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "anti-check-eslint-a-c",
    "type": "eslint",
  },
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "anti-check-stricter-a-c",
    "type": "stricter",
  },
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "anti-check-eslint-b-a",
    "type": "eslint",
  },
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "anti-check-stricter-b-a",
    "type": "stricter",
  },
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "anti-check-eslint-b-b",
    "type": "eslint",
  },
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "anti-check-stricter-b-b",
    "type": "stricter",
  },
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "anti-check-eslint-b-c",
    "type": "eslint",
  },
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "anti-check-stricter-b-c",
    "type": "stricter",
  },
]
`;

exports[`Utils for techstack tests getChecksForTechStack should return correct checks 2`] = `
Array [
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "anti-check-eslint-a-a",
    "type": "eslint",
  },
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "anti-check-stricter-a-a",
    "type": "stricter",
  },
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "anti-check-eslint-a-b",
    "type": "eslint",
  },
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "anti-check-stricter-a-b",
    "type": "stricter",
  },
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "anti-check-eslint-a-c",
    "type": "eslint",
  },
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "anti-check-stricter-a-c",
    "type": "stricter",
  },
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "check-eslint-b-a",
    "type": "eslint",
  },
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "check-stricter-b-a",
    "type": "stricter",
  },
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "check-eslint-b-b",
    "type": "eslint",
  },
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "check-stricter-b-b",
    "type": "stricter",
  },
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "anti-check-eslint-b-c",
    "type": "eslint",
  },
  Object {
    "configuration": "error",
    "plugin": "plugin",
    "rule": "anti-check-stricter-b-c",
    "type": "stricter",
  },
]
`;
